<resources>
    <string name="app_name">Enigma</string>
    <string name="app_name_author">By CONFRINGO Inc.</string>

    <string name="login1">Hey,\nLogin Now</string>
    <string name="login2">Welcome Back, You\'ve been missed!</string>
    <string name="register1">Create Account</string>
    <string name="register2">Register yourself to get started</string>
    <string name="name">Full name</string>
    <string name="email">Email</string>
    <string name="login">Log in</string>
    <string name="signIn">Sign in</string>
    <string name="register">Register</string>
    <string name="notLoggedIn">Don\'t have an account?</string>
    <string name='loggedIn'>Already have an account?</string>
    <string name="forgot">Forgot password?</string>
    <string name="terms">Terms and conditions apply</string>
    <string name="or_sign_up">Or sign up using</string>
    <string name="back">Back</string>
    <string name="reset">Reset</string>
    <string name="send">Send</string>
    <string name="re_password">Re-enter Password</string>
    <string name="forgot1">Reset your password</string>
    <string name="forgot2">Enter your email address to receive reset password mail</string>
    <string name="reset1">Reset your password</string>
    <string name="reset2">Enter your new password</string>
    <string name="facebook_app_id">339549170511416</string>
    <string name="fb_login_protocol_scheme">fb339549170511416</string>
    <string name="home">HOME</string>
    <string name="data">QUESTIONS</string>
    <string name="file">PAPERS</string>
    <string name="user">PROFILE</string>
    <string name="log_out">Log out</string>
    <string name="search">Search</string>
    <string name="welcome">Hello</string>
    <string name="welcome2">Welcome to Question Paper Maker</string>
    <string name="fab">FAB</string>
    <string name="settings">SETTINGS</string>
    <string name="add_questions">ADD QUESTIONS</string>
    <string name="et_enter_your_question">Enter your question</string>
    <string name="question_type">Question Type</string>
    <string name="question_difficulty">Question Difficulty</string>
    <string name="hard">Hard</string>
    <string name="medium">Medium</string>
    <string name="easy">Easy</string>
    <string name="submit">Submit</string>
    <string name="marks">Marks</string>
    <string name="add_question">Add Question</string>
    <string name="delete">Delete</string>
    <string name="remembering">Remember</string>
    <string name="understanding">Understand</string>
    <string name="questions">QUESTIONS</string>
    <string name="no_questions">No questions found…\nPlease add questions first</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="options">options</string>
    <string name="no_papers_found">No papers found…\nPlease add papers first</string>
    <string name="generate_question_paper">Generate Question Paper</string>
    <string name="papers">PAPERS</string>
    <string name="generate">Generate Paper</string>
    <string name="cancel">Cancel</string>
    <string name="want_to_delete_question">Want to delete question?</string>
    <string name="top_papers">TOP PAPERS</string>
    <string name="top_questions">TOP QUESTIONS</string>
    <string name="delete_account">Delete account</string>
    <string name="delete_account_msg">Are you sure?\nDeleting account will remove all your data</string>
    <string name="user_name">User</string>
    <string name="edit">Edit</string>
    <string name="selected_questions">Selected Questions</string>
    <string name="next">Next</string>
    <string name="add_paper">Add Paper</string>
    <string name="add_institute_name">Add Institute Name</string>
    <string name="institute_name">Institute Name</string>
    <string name="add_instruction">Add Instruction</string>
    <string name="add_instructions">Add Instructions</string>
    <string name="drag">Drag</string>
    <string name="add">Add</string>
    <string name="number_of_sections">Number of sections</string>
    <string name="pdfs">PDFs</string>
    <string name="about">About</string>
    <string name="about_cap">ABOUT</string>
    <string name="v_1_0_0">V 1.0.0</string>
    <string name="more_info">MORE INFO</string>
    <string name="confringoinc_gmail_com">confringoinc@gmail.com</string>
    <string name="confringoinc_github_io_enigma">confringoinc.github.io/Enigma</string>
    <string name="add_password_to_pdf">Add Password to PDF</string>
    <string name="password">Password</string>
    <string name="add_question_to_paper">Add Question to Paper</string>
    <string name="apply">Apply</string>
    <string name="analyze">Analyze</string>
    <string name="evaluate">Evaluate</string>
    <string name="create">Create</string>
    <string name="get_started">Get Started</string>
</resources>