<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:contentDescription="@string/home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_data"
        android:contentDescription="@string/data"
        android:icon="@drawable/ic_database"
        android:title="@string/data" />

    <item
        android:id="@+id/nav_file"
        android:contentDescription="@string/file"
        android:icon="@drawable/ic_file_text"
        android:title="@string/file" />

    <item
        android:id="@+id/nav_user"
        android:contentDescription="@string/user"
        android:icon="@drawable/ic_user_1"
        android:title="@string/user" />

</menu>