<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    android:fillViewport="true"
    tools:context=".AddQuestion">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:layout_marginTop="15dp"
        style="@style/ImageView"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_left_arrow"
        tools:targetApi="lollipop"
        android:contentDescription="@string/back" />

    <TextView
        android:id="@+id/tv_add_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bold"
        android:textColor="@color/secondary_text"
        android:text="@string/questions"
        app:layout_constraintBottom_toBottomOf="@+id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_back" />

    <EditText
        android:id="@+id/et_question_add"
        style="@style/EditText"
        android:layout_width="0dp"
        android:layout_height="175dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/et_enter_your_question"
        android:lineSpacingExtra="6dp"
        android:inputType="textMultiLine|textCapSentences"
        android:paddingStart="25dp"
        android:paddingTop="20dp"
        android:paddingEnd="25dp"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_question"
        android:autofillHints="@string/et_enter_your_question" />

    <EditText
        android:id="@+id/et_marks_add"
        style="@style/EditText"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:hint="@string/marks"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_question_add"
        android:autofillHints="@string/marks" />

    <TextView
        android:id="@+id/tv_question_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/bold"
        android:text="@string/question_type"
        android:textColor="@color/secondary_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_marks_add" />

    <CheckBox
        android:id="@+id/cb_anything"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/anything"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_question_type" />

    <CheckBox
        android:id="@+id/cb_remembering"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/remembering"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_anything" />

    <CheckBox
        android:id="@+id/cb_understanding"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/understanding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_remembering" />

    <Button
        android:id="@+id/btn_submit"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginBottom="20dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_understanding"
        app:layout_constraintVertical_bias="1.0" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="lollipop" />

</androidx.constraintlayout.widget.ConstraintLayout>