<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingHorizontal="30dp"
    tools:context=".AddQuestion">

    <ImageView
        android:id="@+id/btn_back"
        style="@style/ImageView"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:layout_marginTop="20dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:contentDescription="@string/back"
        android:focusable="true"
        android:src="@drawable/ic_left_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/tv_add_paper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bold"
        android:text="@string/papers"
        android:textColor="@color/secondary_text"
        app:layout_constraintBottom_toBottomOf="@+id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_back" />

    <EditText
        android:id="@+id/et_name"
        style="@style/EditText"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:autofillHints="@string/name"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textCapWords"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_paper" />

    <EditText
        android:id="@+id/et_marks"
        style="@style/EditText"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:autofillHints="@string/marks"
        android:ems="10"
        android:hint="@string/marks"
        android:inputType="numberDecimal"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_name" />

    <Button
        android:id="@+id/btn_submit"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginBottom="20dp"
        android:text="@string/add_paper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_marks"
        app:layout_constraintVertical_bias="1.0" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/primary"
        android:indeterminateTintMode="src_atop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="lollipop" />

</androidx.constraintlayout.widget.ConstraintLayout>